--- a/package.json
+++ b/package.json
@@ -8,17 +8,21 @@
     "start": "next start"
   },
   "dependencies": {
-    "lucide-react": "^0.544.0",
+    "@auth/prisma-adapter": "2.10.0",
+    "@prisma/client": "6.16.1",
+    "lucide-react": "0.544.0",
     "next": "15.5.3",
+    "next-auth": "4.24.11",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "@tailwindcss/postcss": "4",
+    "@types/node": "20",
+    "@types/react": "19",
+    "@types/react-dom": "19",
+    "prisma": "6.16.1",
+    "tailwindcss": "4",
+    "typescript": "5"
   }
 }
