--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "2.10.0",
+    "@hookform/resolvers": "^5.2.1",
     "@prisma/client": "6.16.1",
     "lucide-react": "0.544.0",
     "next": "15.5.3",
     "next-auth": "4.24.11",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-hook-form": "^7.62.0",
+    "zod": "^4.1.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "4",
