--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@auth/prisma-adapter": "2.10.0",
     "@hookform/resolvers": "^5.2.1",
     "@prisma/client": "6.16.1",
+    "axios": "^1.12.2",
     "lucide-react": "0.544.0",
     "next": "15.5.3",
     "next-auth": "4.24.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
+    "react-hot-toast": "^2.6.0",
     "zod": "^4.1.8"
   },
   "devDependencies": {
